# AIM-Cert-Challange

./: .gitignore  README.md  prepare_for_submission.sh
Final Submission/: Final.md
Task  (1)/: Task_1.md
Task  (2)/: Task_2.md
Task  (3)/: Task_03.md
Task  (4)/: .env.example  .pre-commit-config.yaml  ADVANCED_CHUNKING_ARCHITECTURE.md  INGESTION_MANAGEMENT.md  Makefile  README.md  check_ingestion_status.sh  docker-compose.qdrant.yml  docker-compose.yml  monitor_ingestion.sh  pyproject.toml
Task  (4)/backend/agents/: __init__.py  error_handler.py  models.py  rag_search_agent.py  supervisor_agent.py  synthesis_agent.py  web_search_agent.py
Task  (4)/backend/api/: Dockerfile  README.md  __init__.py  dependencies.py  main.py  pyproject.toml  requirements.txt
Task  (4)/backend/api/routers/: __init__.py  negotiation.py  websocket.py
Task  (4)/backend/api/utils/: cache.py  progress.py
Task  (4)/backend/evaluation/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
Task  (4)/backend/ingestion/: Dockerfile  INGESTION_PIPELINE_UPDATES.md  INGESTION_README.md  README.md  __init__.py  constants.py  dual_chunking_pipeline.py  dual_rag_retriever.py  ingest.py  ingestion_status.py  naive_chunker.py  pyproject.toml  qdrant_collections.py  semantic_chunker.py
Task  (4)/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
Task  (4)/frontend/src/: App.tsx
Task  (4)/frontend/src/components/negotiation/: AnalysisTransparency.tsx  ChatInterface.tsx  ComparisonView.tsx  MessageInput.tsx  ResponseDisplay.tsx  RetrievedContext.tsx  index.ts
Task  (4)/frontend/src/components/settings/: api-key-manager.tsx  index.ts
Task  (4)/frontend/src/components/ui/: api-key-input.tsx  collapsible.tsx  index.ts  progress.tsx
Task  (4)/frontend/src/services/: api.ts
Task  (4)/frontend/src/store/: apiKeyStore.ts
Task  (4)/frontend/src/types/: api.ts
Task  (4)/scripts/: setup-dev.sh
Task  (5)/: Task_05.md
Task  (5)/BCK/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  prompt.txt
Task  (5)/ragas-evaluation/: .env.template  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  run_evaluation.py  run_generation_evaluation.py  run_retrieval_evaluation.py  setup.sh
Task  (5)/ragas-evaluation/data/: Never_split_the_diff.md
Task  (5)/ragas-evaluation/docs/archive/: METRICS_EXPLANATION.md  SUMMARY.md  UNDERSTANDING_ZERO_VALUES.md
Task  (5)/ragas-evaluation/outputs/: generation_evaluation_report.md  generation_evaluation_results.csv  retrieval_evaluation_results.json  retrieval_vs_generation_comparison.csv
Task  (5)/ragas-evaluation/outputs/generation_tables/: generation_summary_table.csv  generation_summary_table.html
Task  (5)/ragas-evaluation/outputs/retrieval_tables/: retrieval_summary_table.html
Task  (5)/ragas-evaluation/src/ragas_evaluation/: __init__.py  __main__.py  config.py
Task  (5)/ragas-evaluation/src/ragas_evaluation/data_generation/: golden_dataset.py
Task  (5)/ragas-evaluation/src/ragas_evaluation/evaluation/: evaluator.py  generation_evaluator.py  retrieval_evaluator.py
Task  (5)/ragas-evaluation/src/ragas_evaluation/retrievers/: base.py  implementations.py  parent_child_chunker.py
Task  (5)/ragas-evaluation/src/ragas_evaluation/utils/: document_loader.py  markdown_loader.py
Task  (5)/ragas-evaluation/src/ragas_evaluation/visualizations/: plots.py  retrieval_plots.py  summary_report.py
Task  (5)/ragas-evaluation/tests/: test_fast_evaluation.py  test_retrieval_metrics.py
Task  (5)/ragas-evaluation/the_gold/: ragas_golden_dataset.csv  ragas_golden_dataset.json  ragas_golden_dataset.md
Task  (5)/task -results/outputs/: retrieval_evaluation_report.md  retrieval_evaluation_results.csv
Task  (5)/task -results/outputs/retrieval_tables/: retrieval_summary_table.csv
Task  (6)/: Task_06.md
Task  (7)/: Task_07.md
