[project]
name = "freelancer-negotiation-api"
version = "1.0.0"
description = "API service for Freelancer Negotiation Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "qdrant-client==1.7.0",
    "openai>=1.10.0",
    "langchain==0.1.0",
    "langgraph==0.0.20",
    "langsmith>=0.0.77,<0.1.0",
    "httpx==0.25.2",
    "websockets==12.0",
    "python-multipart==0.0.6",
    "cohere==4.39.0",
    "exa-py==1.0.8",
    "numpy>=1.26.0",
    "ragas==0.1.0",
    "langchain-openai==0.0.5",
    "cachetools==5.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]