[project]
name = "freelancer-negotiation-evaluation"
version = "1.0.0"
description = "Evaluation service for Freelancer Negotiation Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragas==0.1.0",
    "langchain==0.1.0",
    "langchain-openai==0.0.5",
    "langsmith>=0.0.77,<0.1.0",
    "openai>=1.10.0",
    "qdrant-client==1.7.0",
    "pandas==2.1.4",
    "numpy>=1.26.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]