[project]
name = "freelancer-negotiation-ingestion"
version = "1.0.0"
description = "Data ingestion service for Freelancer Negotiation Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.7.0",
    "openai>=1.35.0",
    "langchain==0.1.0",
    "PyPDF2==3.0.1",
    "tiktoken>=0.5.2",
    "numpy>=1.26.0",
    "cohere==4.39.0",
    "pydantic==2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]